--- a/Pomidor/Views/Home/Index.cshtml
+++ b/Pomidor/Views/Home/Index.cshtml
@@ -1,8 +1,42 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model PomidorViewModel
+@{
+    ViewData["Title"] = "Pomidor";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <h1 class="Time" data-container="@Model.Rest.TotalMilliseconds">@Model.Rest.ToString(@"mm\:ss")</h1>
+    <button type="button" class="btn" onclick="start()">Start</button>
 </div>
+
+<div class="modal fade" id="CompletionForm">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Награды</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div>
+                    <img src="~/images/money.png" /><label id="money">0</label>
+                </div>
+                <div>
+                    <img src="~/images/experince.png" /><label id="experience">0</label>
+                </div>
+            </div>
+            @*<div class="modal-footer">
+                <button type="button" class="btn btn-info">Любая кнопка</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+            </div>*@
+        </div>
+    </div>
+</div>
+
+@section scripts
+{
+<script type="text/javascript">
+    
+</script>
+    }
