--- a/Pomidor/Views/Shared/_Layout.cshtml
+++ b/Pomidor/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Pomidor</title>
+    <title>@ViewData["Title"] - Pomipets</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -21,6 +21,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
+                <div id="heroSummary" class="rounded">
+                    @await Component.InvokeAsync("HeroSummary")
+                </div>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Pomidor</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
